Fix-FIA-in-CReDo: don't display ribbon text on mobile

--- a/web/twa-vis-platform/code/src/ui/interaction/ribbon/ribbon.module.css
+++ b/web/twa-vis-platform/code/src/ui/interaction/ribbon/ribbon.module.css
@@ -51,3 +51,9 @@
     height: 30px;
     margin: 0 0.5rem;
 }
+
+@media (max-width: 430px) {
+    .scenarioDisplayText {
+        display: none;
+    }
+}
